# linux_appdev

01_TerminalProject/: Makefile  Show.c  a.out
02_Multifile/: Makefile  prog.c
03_Text/: randomize.sh
04_Debugging/: Makefile  prog.c  test1.gdb  test2.gdb
05_Regexps/: Makefile  esub.c  run_sed.sh
05_Regexps/tests/: 01.test  02.test  03.test  04.test  05.test
06_Tracing/: Makefile  move.c  preserver.c
06_Tracing/tests/: 01.sh  02.sh  03.sh  04.sh  05.sh  06.sh  preload.sh
07_Environmental/: Makefile.am  configure.ac  remove_autotools_trash.sh
07_Environmental/src/: rhasher.c
07_Environmental/tests/: md5_base64_file.sh  md5_base64_string.sh  md5_hex_file.sh  md5_hex_string.sh  sha1_base64_file.sh  sha1_base64_string.sh  sha1_hex_file.sh  sha1_hex_string.sh  tth_base64_file.sh  tth_base64_string.sh  tth_hex_file.sh  tth_hex_string.sh
07_Environmental/tests/template/: template.sh
08_I18n/: Makefile.am  configure.ac  ru.po
08_I18n/po/: ru.po
08_I18n/src/: Makefile.am  guesser.c
09_PatchDiff/: Makefile  labyrinth.c
09_PatchDiff/patches/: 1.patch  2.patch  3.patch
10_LibTesting/: Makefile.am  configure.ac
10_LibTesting/src/: Makefile.am
10_LibTesting/tests/: Makefile.am  bench.ts  unittest.ts
11_Documenting/: Doxyfile.in  Makefile.am  configure.ac
11_Documenting/po/: ru.po
11_Documenting/src/: Makefile.am  guesser.c
12_InstallPackaging/: Doxyfile.in  Makefile.am  configure.ac
12_InstallPackaging/po/: POTFILES.in  ru.po
12_InstallPackaging/src/: Makefile.am  libmatrixops.c  matrix_ops_runner.c  matrixops.h
12_InstallPackaging/tests/: Makefile.am  unittest.ts
